--- a/frontend/src/locales/zh.json
+++ b/frontend/src/locales/zh.json
@@ -1,37 +1,37 @@
 {
   "navbar": {
+    "about": "关于冒险日志",
     "adventures": "冒险",
-    "collections": "合集",
-    "worldtravel": "环游世界",
-    "map": "地图",
-    "users": "用户",
-    "search": "搜索",
-    "profile": "个人资料",
+    "collections": "收藏",
+    "discord": "不和谐",
+    "documentation": "文档",
     "greeting": "你好",
+    "logout": "退出",
+    "map": "地图",
     "my_adventures": "我的冒险",
+    "profile": "轮廓",
+    "search": "搜索",
+    "settings": "设置",
+    "shared_with_me": "与我分享",
+    "theme_selection": "主题选择",
+    "themes": {
+      "aqua": "阿夸",
+      "dark": "黑暗的",
+      "forest": "森林",
+      "light": "光",
+      "night": "夜晚",
+      "aestheticDark": "审美黑暗",
+      "aestheticLight": "美学之光",
+      "northernLights": "北极光"
+    },
+    "users": "用户",
+    "worldtravel": "环球旅行",
     "my_tags": "我的标签",
     "tag": "标签",
-    "shared_with_me": "与我共享",
-    "settings": "设置",
-    "logout": "登出",
-    "about": "关于AdventureLog",
-    "documentation": "文档",
-    "discord": "Discord",
     "language_selection": "语言",
     "support": "支持",
     "calendar": "日历",
-    "theme_selection": "主题选择",
-    "admin_panel": "管理面板",
-    "themes": {
-      "light": "明亮",
-      "dark": "黑暗",
-      "night": "夜晚",
-      "forest": "森林",
-      "aestheticLight": "美学明亮",
-      "aestheticDark": "美学黑暗",
-      "aqua": "水蓝",
-      "northernLights": "北极光"
-    }
+    "admin_panel": "管理面板"
   },
   "about": {
     "about": "关于",
@@ -45,18 +45,18 @@
     "close": "关闭"
   },
   "home": {
-    "hero_1": "发现世界上最刺激的冒险",
-    "hero_2": "使用 AdventureLog 发现并计划您的下一个冒险。\n探索令人叹为观止的目的地，创建自定义行程，并随时随地保持联系。",
-    "go_to": "前往AdventureLog",
-    "key_features": "主要功能",
     "desc_1": "轻松发现、规划和探索",
-    "desc_2": "AdventureLog 旨在简化您的旅程，为您提供计划、打包和导航下一个难忘冒险的工具和资源。",
+    "desc_2": "AdventureLog 旨在简化您的旅程，为您提供工具和资源来计划、打包和导航您的下一次难忘的冒险。",
     "feature_1": "旅行日志",
-    "feature_1_desc": "通过个性化的旅行日志记录你的冒险，并与朋友和家人分享你的经历。",
-    "feature_2": "行程规划",
-    "feature_2_desc": "轻松创建自定义行程，并获取每日行程明细。",
-    "feature_3": "旅行地图",
-    "feature_3_desc": "通过交互式地图查看你在世界各地的旅行，并探索新的目的地。"
+    "feature_1_desc": "通过个性化的旅行日志记录您的冒险经历，并与朋友和家人分享您的经历。",
+    "feature_2": "旅行计划",
+    "feature_2_desc": "轻松创建自定义行程并获取行程的每日详细信息。",
+    "feature_3": "旅游地图",
+    "feature_3_desc": "使用交互式地图查看您在世界各地的旅行并探索新的目的地。",
+    "go_to": "前往冒险日志",
+    "hero_1": "探索世界上最惊险的冒险",
+    "hero_2": "使用 AdventureLog 发现并计划您的下一次冒险。\n探索令人惊叹的目的地、创建定制行程并随时随地保持联系。",
+    "key_features": "主要特点"
   },
   "adventures": {
     "collection_remove_success": "成功从合集中移除冒险！",
@@ -266,7 +266,7 @@
     "attachment_update_success": "附件更新成功！",
     "attachment_name": "附件名称",
     "gpx_tip": "上传 GPX 文件到附件以便在地图上查看它们！",
-    "welcome_map_info": "此服务器上的公开冒险",
+    "welcome_map_info": "该服务器上的公共冒险",
     "attachment_update_error": "更新附件时出错",
     "activities": {
       "general": "通用 🌍",
@@ -294,107 +294,8 @@
     },
     "lodging_information": "住宿信息",
     "price": "价格",
-    "region": "地区",
     "reservation_number": "预订号",
-    "welcome_map_info": "该服务器上的公共冒险",
     "open_in_maps": "在地图上打开"
-  },
-  "home": {
-    "desc_1": "轻松发现、规划和探索",
-    "desc_2": "AdventureLog 旨在简化您的旅程，为您提供工具和资源来计划、打包和导航您的下一次难忘的冒险。",
-    "feature_1": "旅行日志",
-    "feature_1_desc": "通过个性化的旅行日志记录您的冒险经历，并与朋友和家人分享您的经历。",
-    "feature_2": "旅行计划",
-    "feature_2_desc": "轻松创建自定义行程并获取行程的每日详细信息。",
-    "feature_3": "旅游地图",
-    "feature_3_desc": "使用交互式地图查看您在世界各地的旅行并探索新的目的地。",
-    "go_to": "前往冒险日志",
-    "hero_1": "探索世界上最惊险的冒险",
-    "hero_2": "使用 AdventureLog 发现并计划您的下一次冒险。\n探索令人惊叹的目的地、创建定制行程并随时随地保持联系。",
-    "key_features": "主要特点"
-  },
-  "navbar": {
-    "about": "关于冒险日志",
-    "adventures": "冒险",
-    "collections": "收藏",
-    "discord": "不和谐",
-    "documentation": "文档",
-    "greeting": "你好",
-    "logout": "退出",
-    "map": "地图",
-    "my_adventures": "我的冒险",
-    "profile": "轮廓",
-    "search": "搜索",
-    "settings": "设置",
-    "shared_with_me": "与我分享",
-    "theme_selection": "主题选择",
-    "themes": {
-      "aqua": "阿夸",
-      "dark": "黑暗的",
-      "forest": "森林",
-      "light": "光",
-      "night": "夜晚",
-      "aestheticDark": "审美黑暗",
-      "aestheticLight": "美学之光",
-      "northernLights": "北极光"
-    },
-    "users": "用户",
-    "worldtravel": "环球旅行",
-    "my_tags": "我的标签",
-    "tag": "标签",
-    "language_selection": "语言",
-    "support": "支持",
-    "calendar": "日历",
-    "admin_panel": "管理面板"
-  },
-  "auth": {
-    "forgot_password": "忘记密码？",
-    "login": "登录",
-    "login_error": "无法使用提供的凭据登录。",
-    "password": "密码",
-    "signup": "报名",
-    "username": "用户名",
-    "confirm_password": "确认密码",
-    "email": "电子邮件",
-    "first_name": "名",
-    "last_name": "姓",
-    "registration_disabled": "目前已禁用注册。",
-    "profile_picture": "个人资料图片",
-    "public_profile": "公开资料",
-    "public_tooltip": "通过公开个人资料，用户可以与您共享收藏并在用户页面上查看您的个人资料。",
-    "email_required": "电子邮件为必填项",
-    "both_passwords_required": "两个密码都需要",
-    "new_password": "新密码",
-    "reset_failed": "重置密码失败",
-    "or_3rd_party": "或者使用第三方服务登录",
-    "no_public_adventures": "找不到公共冒险",
-    "no_public_collections": "找不到公共收藏",
-    "user_adventures": "用户冒险",
-    "user_collections": "用户收集"
-  },
-  "worldtravel": {
-    "all": "全部",
-    "all_subregions": "所有次区域",
-    "clear_search": "清除搜索",
-    "completely_visited": "已完全访问",
-    "country_list": "国家列表",
-    "no_countries_found": "没有找到国家",
-    "not_visited": "未访问过",
-    "num_countries": "找到的国家",
-    "partially_visited": "部分访问",
-    "all_visited": "您已访问过所有地区",
-    "cities": "城市",
-    "failed_to_mark_visit": "无法标记访问",
-    "failed_to_remove_visit": "无法删除对的访问",
-    "marked_visited": "标记为已访问",
-    "no_cities_found": "没有找到城市",
-    "region_failed_visited": "无法将区域标记为已访问",
-    "region_stats": "地区统计",
-    "regions_in": "地区位于",
-    "removed": "已删除",
-    "view_cities": "查看城市",
-    "visit_remove_failed": "删除访问失败",
-    "visit_to": "参观"
   },
   "auth": {
     "forgot_password": "忘记密码？",
@@ -420,6 +321,30 @@
     "no_public_collections": "未找到公开合集",
     "user_adventures": "用户冒险",
     "user_collections": "用户合集"
+  },
+  "worldtravel": {
+    "all": "全部",
+    "all_subregions": "所有次区域",
+    "clear_search": "清除搜索",
+    "completely_visited": "已完全访问",
+    "country_list": "国家列表",
+    "no_countries_found": "没有找到国家",
+    "not_visited": "未访问过",
+    "num_countries": "找到的国家",
+    "partially_visited": "部分访问",
+    "all_visited": "您已访问过所有地区",
+    "cities": "城市",
+    "failed_to_mark_visit": "无法标记访问",
+    "failed_to_remove_visit": "无法删除对的访问",
+    "marked_visited": "标记为已访问",
+    "no_cities_found": "没有找到城市",
+    "region_failed_visited": "无法将区域标记为已访问",
+    "region_stats": "地区统计",
+    "regions_in": "地区位于",
+    "removed": "已删除",
+    "view_cities": "查看城市",
+    "visit_remove_failed": "删除访问失败",
+    "visit_to": "参观"
   },
   "users": {
     "no_users_found": "未找到已公开个人资料的用户。"
@@ -503,7 +428,15 @@
     "social_auth_desc_2": "这些设置在 AdventureLog 服务器中进行管理，并且必须由管理员手动启用。",
     "social_oidc_auth": "社交与 OIDC 认证",
     "add_email": "添加邮箱",
-    "password_too_short": "密码必须至少为 6 个字符"
+    "password_too_short": "密码必须至少为 6 个字符",
+    "disable_password": "禁用密码",
+    "password_disable": "禁用密码身份验证",
+    "password_disable_desc": "禁用密码身份验证将阻止您使用密码登录。\n您将需要使用社交或OIDC提供商登录。如果您的社交提供商未链接，即使禁用了此设置，密码身份验证也将自动重新启用。",
+    "password_disable_warning": "当前，密码身份验证已禁用。\n需要通过社交或OIDC提供商登录。",
+    "password_disabled": "密码身份验证禁用",
+    "password_disabled_error": "错误禁用密码身份验证。\n确保将社交或OIDC提供商链接到您的帐户。",
+    "password_enabled": "启用密码身份验证",
+    "password_enabled_error": "启用密码身份验证的错误。"
   },
   "checklist": {
     "add_item": "添加项目",
