--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -250,6 +250,7 @@
 		"show_map": "Show Map",
 		"emoji_picker": "Emoji Picker",
 		"download_calendar": "Download Calendar",
+		"all_day": "All Day",
 		"date_information": "Date Information",
 		"flight_information": "Flight Information",
 		"out_of_range": "Not in itinerary date range",
