feat: Add troubleshooting guide for unresponsive login and registration, enhance collection modal alerts, and improve localization for itinerary features

--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -131,6 +131,7 @@
 		"search_for_location": "Search for a location",
 		"clear_map": "Clear map",
 		"search_results": "Searh results",
+		"collection_no_start_end_date": "Adding a start and end date to the collection will unlock itinerary planning features in the collection page.",
 		"no_results": "No results found",
 		"wiki_desc": "Pulls excerpt from Wikipedia article matching the name of the adventure.",
 		"attachments": "Attachments",
@@ -251,6 +252,9 @@
 		"emoji_picker": "Emoji Picker",
 		"download_calendar": "Download Calendar",
 		"all_day": "All Day",
+		"ordered_itinerary": "Ordered Itinerary",
+		"date_itinerary": "Date Itinerary",
+		"no_ordered_items": "Add items with dates to the collection to see them here.",
 		"date_information": "Date Information",
 		"flight_information": "Flight Information",
 		"out_of_range": "Not in itinerary date range",
