--- a/frontend/src/locales/es.json
+++ b/frontend/src/locales/es.json
@@ -296,7 +296,11 @@
     "reservation_number": "Número de reserva",
     "welcome_map_info": "Aventuras públicas en este servidor",
     "open_in_maps": "Abrir en mapas",
-    "all_day": "Todo el día"
+    "all_day": "Todo el día",
+    "collection_no_start_end_date": "Agregar una fecha de inicio y finalización a la colección desbloqueará las funciones de planificación del itinerario en la página de colección.",
+    "date_itinerary": "Itinerario de fecha",
+    "no_ordered_items": "Agregue elementos con fechas a la colección para verlos aquí.",
+    "ordered_itinerary": "Itinerario ordenado"
   },
   "worldtravel": {
     "all": "Todo",
