feat: Add additional adventure type and endpoint for sunrise/sunset information

--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -90,6 +90,8 @@
 		"visits": "Visits",
 		"create_new": "Create New...",
 		"adventure": "Adventure",
+		"additional_info": "Additional Information",
+		"sunrise_sunset": "Sunrise & Sunset",
 		"count_txt": "results matching your search",
 		"sort": "Sort",
 		"order_by": "Order By",
