Consistency in translating collections

--- a/frontend/src/locales/it.json
+++ b/frontend/src/locales/it.json
@@ -35,14 +35,14 @@
       "water_sports": "Sport acquatici 🚤",
       "wildlife": "Fauna selvatica 🦒"
     },
-    "add_to_collection": "Aggiungi alla raccolta",
+    "add_to_collection": "Aggiungi alla collezione",
     "adventure": "Avventura",
     "adventure_delete_confirm": "Sei sicuro di voler eliminare questa avventura? \nQuesta azione non può essere annullata.",
     "adventure_details": "Dettagli dell'avventura",
     "adventure_type": "Tipo di avventura",
     "archive": "Archivio",
     "archived": "Archiviato",
-    "archived_collection_message": "Raccolta archiviata con successo!",
+    "archived_collection_message": "Collezione archiviata con successo!",
     "archived_collections": "Collezioni archiviate",
     "ascending": "Ascendente",
     "cancel": "Cancellare",
@@ -50,19 +50,19 @@
     "clear": "Rimuovere",
     "close_filters": "Chiudi filtri",
     "collection": "Collezione",
-    "collection_link_error": "Errore nel collegamento dell'avventura alla raccolta",
-    "collection_remove_error": "Errore durante la rimozione dell'avventura dalla raccolta",
-    "collection_remove_success": "Avventura rimossa con successo dalla raccolta!",
+    "collection_link_error": "Errore nel collegamento dell'avventura alla collezione",
+    "collection_remove_error": "Errore durante la rimozione dell'avventura dalla collezione",
+    "collection_remove_success": "Avventura rimossa con successo dalla collezione!",
     "count_txt": "risultati corrispondenti alla tua ricerca",
     "create_new": "Crea nuovo...",
     "date": "Data",
     "delete": "Eliminare",
-    "delete_collection": "Elimina raccolta",
-    "delete_collection_success": "Raccolta eliminata con successo!",
-    "delete_collection_warning": "Sei sicuro di voler eliminare questa raccolta? \nCiò eliminerà anche tutte le avventure collegate. \nQuesta azione non può essere annullata.",
+    "delete_collection": "Elimina collezione",
+    "delete_collection_success": "Collezione eliminata con successo!",
+    "delete_collection_warning": "Sei sicuro di voler eliminare questa collezione? \nCiò eliminerà anche tutte le avventure collegate. \nQuesta azione non può essere annullata.",
     "descending": "Discendente",
     "edit_adventure": "Modifica Avventura",
-    "edit_collection": "Modifica raccolta",
+    "edit_collection": "Modifica collezione",
     "filter": "Filtro",
     "homepage": "Home page",
     "latitude": "Latitudine",
@@ -79,18 +79,18 @@
     "private": "Privato",
     "public": "Pubblico",
     "rating": "Valutazione",
-    "remove_from_collection": "Rimuovi dalla raccolta",
+    "remove_from_collection": "Rimuovi dalla collezione",
     "share": "Condividere",
     "sort": "Ordinare",
     "sources": "Fonti",
     "unarchive": "Annulla l'archiviazione",
-    "unarchived_collection_message": "Raccolta disarchiviata con successo!",
+    "unarchived_collection_message": "Collezione disarchiviata con successo!",
     "updated": "Aggiornato",
     "visit": "Visita",
     "visits": "Visite",
     "adventure_delete_success": "Avventura eliminata con successo!",
     "collection_adventures": "Includi avventure dalle raccolte",
-    "collection_link_success": "Avventura collegata alla raccolta con successo!",
+    "collection_link_success": "Avventura collegata alla collezione con successo!",
     "dates": "Date",
     "delete_adventure": "Elimina avventura",
     "duration": "Durata",
@@ -116,7 +116,7 @@
     "category": "Categoria",
     "clear_map": "Libera mappa",
     "copy_link": "Copia collegamento",
-    "date_constrain": "Vincolare alle date di raccolta",
+    "date_constrain": "Vincolare alle date di collezione",
     "description": "Descrizione",
     "end_date": "Data di fine",
     "fetch_image": "Recupera immagine",
@@ -157,8 +157,8 @@
     "mark_visited": "Segna come visitato",
     "my_adventures": "Le mie avventure",
     "no_adventures_found": "Nessuna avventura trovata",
-    "no_collections_found": "Nessuna raccolta trovata a cui aggiungere questa avventura.",
-    "no_linkable_adventures": "Non è stata trovata alcuna avventura che possa essere collegata a questa raccolta.",
+    "no_collections_found": "Nessuna collezione trovata a cui aggiungere questa avventura.",
+    "no_linkable_adventures": "Non è stata trovata alcuna avventura che possa essere collegata a questa collezione.",
     "not_visited": "Non visitato",
     "regions_updated": "regioni aggiornate",
     "update_visited_regions": "Aggiorna le regioni visitate",
@@ -168,9 +168,9 @@
     "add_new": "Aggiungi nuovo...",
     "checklist": "Lista di controllo",
     "checklists": "Liste di controllo",
-    "collection_archived": "Questa raccolta è stata archiviata.",
-    "collection_completed": "Hai completato questa raccolta!",
-    "collection_stats": "Statistiche della raccolta",
+    "collection_archived": "Questa collezione è stata archiviata.",
+    "collection_completed": "Hai completato questa collezione!",
+    "collection_stats": "Statistiche della collezione",
     "days": "giorni",
     "itineary_by_date": "Itinerario per data",
     "keep_exploring": "Continua a esplorare!",
@@ -249,7 +249,7 @@
     "reservation_number": "Numero di prenotazione",
     "open_in_maps": "Aprire in Mappe",
     "all_day": "Tutto il giorno",
-    "collection_no_start_end_date": "L'aggiunta di una data di inizio e fine alla raccolta sbloccherà le funzionalità di pianificazione dell'itinerario nella pagina della raccolta.",
+    "collection_no_start_end_date": "L'aggiunta di una data di inizio e fine alla collezione sbloccherà le funzionalità di pianificazione dell'itinerario nella pagina della collezione.",
     "date_itinerary": "Data dell'itinerario",
     "no_ordered_items": "Aggiungi elementi con date alla collezione per vederli qui.",
     "ordered_itinerary": "Itinerario ordinato"
@@ -448,7 +448,7 @@
     "checklist_delete_error": "Errore durante l'eliminazione della lista di controllo",
     "checklist_deleted": "Lista di controllo eliminata con successo!",
     "checklist_editor": "Redattore della lista di controllo",
-    "checklist_public": "Questa lista di controllo è pubblica perché è in una raccolta pubblica.",
+    "checklist_public": "Questa lista di controllo è pubblica perché è in una collezione pubblica.",
     "editing_checklist": "Lista di controllo per la modifica",
     "failed_to_save": "Impossibile salvare la lista di controllo",
     "item": "Elemento",
@@ -461,12 +461,12 @@
     "new_checklist": "Nuova lista di controllo"
   },
   "collection": {
-    "edit_collection": "Modifica raccolta",
-    "error_creating_collection": "Errore durante la creazione della raccolta",
-    "error_editing_collection": "Errore durante la modifica della raccolta",
+    "edit_collection": "Modifica collezione",
+    "error_creating_collection": "Errore durante la creazione della collezione",
+    "error_editing_collection": "Errore durante la modifica della collezione",
     "new_collection": "Nuova collezione",
     "collection_created": "Collezione creata con successo!",
-    "collection_edit_success": "Raccolta modificata con successo!",
+    "collection_edit_success": "Collezione modificata con successo!",
     "create": "Creare",
     "public_collection": "Collezione pubblica"
   },
@@ -535,13 +535,13 @@
   "share": {
     "no_users_shared": "Nessun utente condiviso con",
     "not_shared_with": "Non condiviso con",
-    "share_desc": "Condividi questa raccolta con altri utenti.",
+    "share_desc": "Condividi questa collezione con altri utenti.",
     "shared": "Condiviso",
     "shared_with": "Condiviso con",
     "unshared": "Non condiviso",
     "with": "con",
     "go_to_settings": "Vai alle impostazioni",
-    "no_shared_found": "Nessuna raccolta trovata condivisa con te.",
+    "no_shared_found": "Nessuna collezione trovata condivisa con te.",
     "set_public": "Per consentire agli utenti di condividere con te, è necessario che il tuo profilo sia impostato su pubblico."
   },
   "profile": {
