Update en.json - Correct spelling of Search

--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -130,7 +130,7 @@
 		"location": "Location",
 		"search_for_location": "Search for a location",
 		"clear_map": "Clear map",
-		"search_results": "Searh results",
+		"search_results": "Search results",
 		"no_results": "No results found",
 		"wiki_desc": "Pulls excerpt from Wikipedia article matching the name of the adventure.",
 		"attachments": "Attachments",
