--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -62,6 +62,7 @@
 		"collection_remove_success": "Adventure removed from collection successfully!",
 		"collection_remove_error": "Error removing adventure from collection",
 		"collection_link_success": "Adventure linked to collection successfully!",
+		"invalid_date_range": "Invalid date range",
 		"no_image_found": "No image found",
 		"collection_link_error": "Error linking adventure to collection",
 		"adventure_delete_confirm": "Are you sure you want to delete this adventure? This action cannot be undone.",
