Add additional localization strings for itinerary features in Polish, Swedish, and Chinese
- Added "additional_info", "invalid_date_range", "sunrise_sunset", and "timezone" keys to pl.json, sv.json, and zh.json.
- Updated existing strings for consistency across languages.

--- a/frontend/src/locales/de.json
+++ b/frontend/src/locales/de.json
@@ -252,7 +252,11 @@
     "collection_no_start_end_date": "Durch das Hinzufügen eines Start- und Enddatums zur Sammlung werden Reiseroutenplanungsfunktionen auf der Sammlungsseite freigegeben.",
     "date_itinerary": "Datumstrecke",
     "no_ordered_items": "Fügen Sie der Sammlung Elemente mit Daten hinzu, um sie hier zu sehen.",
-    "ordered_itinerary": "Reiseroute bestellt"
+    "ordered_itinerary": "Reiseroute bestellt",
+    "additional_info": "Weitere Informationen",
+    "invalid_date_range": "Ungültiger Datumsbereich",
+    "sunrise_sunset": "Sonnenaufgang",
+    "timezone": "Zeitzone"
   },
   "home": {
     "desc_1": "Entdecken, planen und erkunden Sie mühelos",
