--- a/frontend/src/locales/fr.json
+++ b/frontend/src/locales/fr.json
@@ -252,7 +252,11 @@
     "collection_no_start_end_date": "L'ajout d'une date de début et de fin à la collection débloquera les fonctionnalités de planification de l'itinéraire dans la page de collection.",
     "date_itinerary": "Itinéraire trié par date",
     "no_ordered_items": "Ajoutez des éléments avec des dates de visite à la collection pour les voir ici.",
-    "ordered_itinerary": "Itinéraire trié par activité"
+    "ordered_itinerary": "Itinéraire trié par activité",
+    "additional_info": "Informations Complémentaires",
+    "invalid_date_range": "Plage de dates non valide",
+    "sunrise_sunset": "Lever du soleil",
+    "timezone": "Fuseau horaire"
   },
   "home": {
     "desc_1": "Découvrez, planifiez et explorez en toute simplicité",
